--- a/app/src/main/res/layout/dialog_language.xml
+++ b/app/src/main/res/layout/dialog_language.xml
@@ -9,6 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@string/roboto_regular"
         android:padding="16dp"
         android:text="@string/select_language"
         android:textAppearance="?android:attr/textAppearanceLarge" />
