--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:fitsSystemWindows="true"
     android:focusableInTouchMode="true"
@@ -36,6 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/et_margin_bottom"
+                android:fontFamily="@string/roboto_regular"
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
                 android:textColor="@color/colorPrimaryDark" />
@@ -52,6 +53,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/et_margin_bottom"
+                android:fontFamily="@string/roboto_regular"
                 android:hint="@string/hint_password"
                 android:inputType="textPassword"
                 android:textColor="@color/colorPrimaryDark" />
@@ -62,6 +64,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/btn_margin_top"
+            android:fontFamily="@string/roboto_regular"
             android:text="@string/btn_login"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
@@ -77,6 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@null"
+                android:fontFamily="@string/roboto_regular"
                 android:text="@string/btn_forgot_password"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary" />
@@ -89,6 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@null"
+                android:fontFamily="@string/roboto_regular"
                 android:text="@string/btn_link_to_register"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary" />
@@ -105,21 +110,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:fontFamily="@string/roboto_regular"
                 android:text="@string/or"
-                android:textColor="@color/colorPrimary" />
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/material_text_subhead" />
 
             <com.facebook.login.widget.LoginButton
                 android:id="@+id/facebook_login_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                facebook:com_facebook_login_text="@string/login_facebook"
-                facebook:com_facebook_logout_text="@string/logout_facebook"
                 android:layout_marginLeft="@dimen/facebook_button_ml"
                 android:layout_marginRight="@dimen/facebook_button_mr"
                 android:layout_marginTop="@dimen/facebook_button_mt"
+                android:fontFamily="@string/roboto_regular"
                 android:paddingBottom="@dimen/facebook_button_pb"
                 android:paddingTop="@dimen/facebook_button_pt"
-                android:text="@string/fbloginText" />
+                android:text="@string/fbloginText"
+                facebook:com_facebook_login_text="@string/login_facebook"
+                facebook:com_facebook_logout_text="@string/logout_facebook" />
 
         </LinearLayout>
 
