--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:fontFamily="@string/roboto_regular"
             android:padding="@dimen/tv_padding"
             android:text="@string/lbl_forgot_password"
             android:textColor="@color/colorPrimary"
@@ -38,6 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/layout_margin_bottom"
+            android:fontFamily="@string/roboto_regular"
             android:gravity="center_horizontal"
             android:padding="@dimen/margin_16dp"
             android:text="@string/forgot_password_msg"
@@ -55,6 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/et_margin_bottom"
                 android:layout_marginTop="@dimen/et_margin_top"
+                android:fontFamily="@string/roboto_regular"
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
                 android:textColor="@color/colorPrimaryDark" />
@@ -65,6 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/layout_margin_top"
+            android:fontFamily="@string/roboto_regular"
             android:text="@string/btn_reset_password"
             android:textAllCaps="false"
             android:textColor="@color/white"
