--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,57 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    android:orientation="vertical">
 
     <ImageView
-        android:src="@drawable/icon_final"
+        android:id="@+id/imageView3"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:id="@+id/imageView3"
+        android:layout_below="@+id/textView5"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_marginTop="31dp"
-        android:layout_below="@+id/textView5"
-        android:layout_centerHorizontal="true" />
+        android:src="@drawable/icon_final" />
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/soccer_events"
-        android:id="@+id/textView5"
-        android:textColor="@color/app_name"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal|top"
         android:layout_marginTop="76dp"
-        android:textSize="40dp"
         android:gravity="center"
-        android:textStyle="bold|italic"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:text="@string/soccer_events"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/app_name"
+        android:textSize="40dp"
+        android:textStyle="bold|italic" />
 
     <com.github.rahatarmanahmed.cpv.CircularProgressView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/splash_progress_view"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:cpv_animAutostart="true"
-        app:cpv_color="@color/app_name"
-        app:cpv_indeterminate="true"
         android:layout_above="@+id/textView6"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="24dp" />
+        android:layout_marginBottom="24dp"
+        app:cpv_animAutostart="true"
+        app:cpv_color="@color/app_name"
+        app:cpv_indeterminate="true" />
 
     <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/cheking_your_rates"
-        android:id="@+id/textView6"
-        android:textColor="@color/app_name"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="35dp" />
+        android:layout_marginBottom="35dp"
+        android:fontFamily="@string/roboto_regular"
+        android:text="@string/cheking_your_rates"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/app_name"
+        android:textSize="@dimen/material_text_subhead" />
 
 </RelativeLayout>
