--- a/app/src/main/res/layout/bottom_sheet_faq.xml
+++ b/app/src/main/res/layout/bottom_sheet_faq.xml
@@ -10,32 +10,34 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@string/roboto_regular"
-            android:padding="@dimen/margin_16dp"
-            android:text="@string/settings_faq"
-            android:textAppearance="@android:style/TextAppearance.Large"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@string/roboto_regular"
-            android:paddingBottom="16dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:text="@string/lorem_ipsum"
-            android:textAppearance="@android:style/TextAppearance.Large"
-            android:textSize="16sp"
-            android:gravity="top|fill" />
-    </LinearLayout>
+                android:fontFamily="@string/roboto_regular"
+                android:padding="@dimen/margin_16dp"
+                android:text="@string/settings_faq"
+                android:textAppearance="@android:style/TextAppearance.Large"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/material_text_title" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@string/roboto_regular"
+                android:gravity="top|fill"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="@string/lorem_ipsum"
+                android:textAppearance="@android:style/TextAppearance.Large"
+                android:textColor="@color/dark"
+                android:textSize="@dimen/material_text_subhead" />
+        </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </FrameLayout>
