--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -23,19 +23,20 @@
                 android:text="@string/how_to_create_bets"
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="20sp" />
+                android:textSize="@dimen/material_text_title" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@string/roboto_regular"
+                android:gravity="top|fill"
                 android:paddingBottom="16dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:text="@string/help_text"
                 android:textAppearance="@android:style/TextAppearance.Large"
-                android:textSize="16sp"
-                android:gravity="top|fill" />
+                android:textColor="@color/dark"
+                android:textSize="@dimen/material_text_subhead" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </FrameLayout>
