--- a/app/src/main/res/layout/fragment_league.xml
+++ b/app/src/main/res/layout/fragment_league.xml
@@ -17,13 +17,26 @@
             android:layout_alignParentTop="true"
             android:scrollbars="vertical" />
 
+        <ImageView
+            android:id="@+id/msg_tv_img_wait"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/stopwatch" />
+
         <TextView
             android:id="@+id/limit_msg_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/msg_tv_img_wait"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@string/roboto_regular"
+            android:gravity="center_horizontal"
             android:text="@string/wait_sec"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textSize="@dimen/material_text_body1" />
     </RelativeLayout>
+
 </android.support.v4.widget.SwipeRefreshLayout>
