--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,15 +9,21 @@
     android:weightSum="1"
     tools:context=".activity.mainActivity.MainActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
     <android.support.design.widget.TabLayout
         android:id="@+id/main_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="4dp"
         android:background="@color/colorPrimary"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:tabGravity="fill"
         app:tabMode="fixed" />
-
+</android.support.design.widget.AppBarLayout>
     <info.androidhive.firebase.classes.utils.CustomViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
