--- a/app/src/main/res/layout/fragment_rate.xml
+++ b/app/src/main/res/layout/fragment_rate.xml
@@ -60,9 +60,10 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="20dp"
+                    android:fontFamily="@string/roboto_regular"
                     android:gravity="center_horizontal"
-                    android:textColor="#fff"
-                    android:textSize="16sp" />
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/material_text_subhead" />
 
                 <TextView
                     android:id="@+id/time_tv"
@@ -71,9 +72,10 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/home_team_iv"
+                    android:fontFamily="@string/roboto_regular"
                     android:gravity="center_horizontal"
-                    android:textColor="#fff"
-                    android:textSize="16sp" />
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/material_text_subhead" />
 
                 <TextView
                     android:id="@+id/match_date_tv"
@@ -82,9 +84,10 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/time_tv"
+                    android:fontFamily="@string/roboto_regular"
                     android:gravity="center_horizontal"
-                    android:textColor="#fff"
-                    android:textSize="16sp" />
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/material_text_subhead" />
 
                 <TextView
                     android:id="@+id/home_team_name_tv"
@@ -94,10 +97,11 @@
                     android:layout_below="@+id/away_team_iv"
                     android:layout_marginLeft="40dp"
                     android:ellipsize="end"
+                    android:fontFamily="@string/roboto_regular"
                     android:gravity="center"
                     android:maxLength="20"
-                    android:textColor="#fff"
-                    android:textSize="14sp" />
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/material_text_body1" />
 
                 <TextView
                     android:id="@+id/away_team_name_tv"
@@ -107,10 +111,11 @@
                     android:layout_below="@+id/away_team_iv"
                     android:layout_marginRight="40dp"
                     android:ellipsize="end"
+                    android:fontFamily="@string/roboto_regular"
                     android:gravity="center"
                     android:maxLength="20"
-                    android:textColor="#fff"
-                    android:textSize="14sp" />
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/material_text_body1" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -127,28 +132,33 @@
                         android:id="@+id/coff_w1_tv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
                         android:layout_weight="1"
+                        android:fontFamily="@string/roboto_regular"
                         android:gravity="center"
-                        android:textColor="#fff"
-                        android:textSize="14sp" />
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/material_text_body1" />
 
                     <TextView
                         android:id="@+id/coff_d_tv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:fontFamily="@string/roboto_regular"
                         android:gravity="center"
-                        android:textColor="#fff"
-                        android:textSize="14sp" />
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/material_text_body1" />
 
                     <TextView
                         android:id="@+id/coff_w2_tv"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
                         android:layout_weight="1"
+                        android:fontFamily="@string/roboto_regular"
                         android:gravity="center"
-                        android:textColor="#fff"
-                        android:textSize="14sp" />
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/material_text_body1" />
                 </LinearLayout>
 
                 <TextView
@@ -158,10 +168,11 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/round_tv"
+                    android:fontFamily="@string/roboto_regular"
                     android:gravity="center_horizontal"
                     android:text=" - "
-                    android:textColor="#fff"
-                    android:textSize="45sp" />
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/material_text_display2" />
 
             </RelativeLayout>
 
@@ -179,6 +190,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#628f3e"
+            android:elevation="4dp"
             android:theme="@style/AppTheme.AppBarOverlay"
             app:tabGravity="fill"
             app:tabMode="fixed" />
