--- a/app/src/main/res/layout/fragment_user_rate.xml
+++ b/app/src/main/res/layout/fragment_user_rate.xml
@@ -38,7 +38,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
             android:background="@color/colorPrimary"
-            android:src="@android:drawable/ic_menu_help"
+            android:src="@drawable/ic_help_outline_white_24dp"
             app:backgroundTint="@color/colorPrimary" />
 
     </android.support.design.widget.CoordinatorLayout>
