--- a/app/src/main/res/layout/home_team_player_row.xml
+++ b/app/src/main/res/layout/home_team_player_row.xml
@@ -12,8 +12,8 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerVertical="true"
-        android:tint="@color/status_bar"
-        android:src="@drawable/ic_account_circle_black_36dp" />
+        android:src="@drawable/ic_account_circle_black_36dp"
+        android:tint="@color/status_bar" />
 
     <TextView
         android:id="@+id/player_name_tv"
@@ -23,7 +23,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@string/roboto_regular"
         android:textColor="@color/dark"
-        android:textSize="@dimen/material_text_subhead"  />
+        android:textSize="@dimen/material_text_subhead" />
 
     <LinearLayout
         android:id="@+id/player_data_linear_layout"
@@ -40,8 +40,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="72dp"
-                android:text="@string/birthday"
                 android:fontFamily="@string/roboto_regular"
+                android:text="@string/birthday"
                 android:textSize="14sp" />
 
             <TextView
@@ -81,8 +81,8 @@
                 android:id="@+id/player_nationality_hint_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/nationality"
                 android:fontFamily="@string/roboto_regular"
+                android:text="@string/nationality"
                 android:textSize="14sp" />
 
             <TextView
@@ -91,8 +91,8 @@
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@+id/player_nationality_hint_tv"
                 android:layout_toRightOf="@+id/player_nationality_hint_tv"
-                android:maxLength="11"
                 android:fontFamily="@string/roboto_regular"
+                android:maxLength="11"
                 android:textSize="14sp" />
 
             <TextView
@@ -101,8 +101,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:maxLength="11"
                 android:fontFamily="@string/roboto_regular"
+                android:maxLength="11"
                 android:textSize="14sp" />
         </RelativeLayout>
     </LinearLayout>
