--- a/app/src/main/res/layout/fragment_home_team.xml
+++ b/app/src/main/res/layout/fragment_home_team.xml
@@ -16,7 +16,7 @@
         android:layout_gravity="center">
 
         <ImageView
-            android:id="@+id/msg_tv_img_bugs"
+            android:id="@+id/api_problem_iv"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_centerHorizontal="true"
@@ -26,7 +26,7 @@
             android:id="@+id/home_msg_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/msg_tv_img_bugs"
+            android:layout_below="@+id/api_problem_iv"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
