--- a/app/src/main/res/layout/fragment_league.xml
+++ b/app/src/main/res/layout/fragment_league.xml
@@ -18,7 +18,7 @@
             android:scrollbars="vertical" />
 
         <ImageView
-            android:id="@+id/msg_tv_img_wait"
+            android:id="@+id/msg_wait_iv"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_centerHorizontal="true"
@@ -29,7 +29,7 @@
             android:id="@+id/limit_msg_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/msg_tv_img_wait"
+            android:layout_below="@+id/msg_wait_iv"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
