--- a/app/src/main/res/layout/fragment_match.xml
+++ b/app/src/main/res/layout/fragment_match.xml
@@ -66,7 +66,9 @@
                 android:layout_marginBottom="162dp"
                 android:background="@null"
                 android:text="&lt;&lt;Back"
-                android:textColor="@color/abc_primary_text_material_dark" />
+                android:textColor="@color/abc_primary_text_material_dark"
+                android:paddingTop="30dp"
+                android:paddingBottom="30dp" />
 
         </RelativeLayout>
     </com.github.fabtransitionactivity.SheetLayout>
